--- a/src/Components/PeliculaSingle/PeliculaSingle.module.css
+++ b/src/Components/PeliculaSingle/PeliculaSingle.module.css
@@ -48,3 +48,17 @@
 .buttonback:hover {
   box-shadow: 0 0 0 1px white;
 }
+
+.check {
+  background-color: #2196f3;
+  color: white;
+  font-size: 1.2em;
+  border: none;
+  border-radius: 3px;
+  padding: 10px;
+  width: 80px;
+  margin: 10px;
+}
+.check:hover {
+  box-shadow: 0 0 0 1px white;
+}
