--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -13,6 +13,12 @@
   width: 170px;
   margin-bottom: 10px;
 }
+
+.moviecard img:hover {
+  scale: 1.02;
+  transition: 0.3s;
+}
+
 .moviecard h3 {
   font-size: 18px;
   text-align: center;
@@ -20,6 +26,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   margin-bottom: 10px;
+  text-decoration: none !important;
 }
 
 .ver {
