--- a/src/Components/PeliculaGrid/PeliculaGrid.module.css
+++ b/src/Components/PeliculaGrid/PeliculaGrid.module.css
@@ -4,5 +4,11 @@
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   padding: 3% 3% 0% 3%;
   justify-content: center;
+}
+.container {
   background-color: #020d18;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 1%;
 }
