--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,9 +1,7 @@
 .moviecard {
   font-family: "Nunito", sans-serif;
-  color: white;
   padding: 8px;
   border-radius: 8px;
-
   width: auto;
 }
 
@@ -22,29 +20,11 @@
   margin-bottom: 10px;
 }
 
-.ver {
-  background-color: #2196f3;
-  margin-bottom: 2px;
-  color: white;
-  font-size: 1em;
-  border: none;
-  width: 100%;
-  border-radius: 3px;
-  height: 2rem;
-}
-.moviecard button:hover {
-  border: 2px solid rgb(255, 255, 255);
-}
-
 .check {
-  background-color: rgb(30, 172, 44);
-  margin-bottom: 2px;
-  color: white;
-  margin-left: 5px;
   font-size: 15px;
   border: none;
-  width: 46%;
-
-  border-radius: 3px;
+  position: absolute;
+  border-radius: 50%;
   height: 2rem;
+  float: right;
 }
