--- a/src/Components/PeliculaGrid/PeliculaGrid.module.css
+++ b/src/Components/PeliculaGrid/PeliculaGrid.module.css
@@ -1,10 +1,10 @@
 .moviegrid {
   display: grid;
-  grid-gap: 2rem 3rem;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-gap: 20px;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   max-width: 100%;
-  padding: 50px;
+  padding: 1rem 3rem;
   justify-content: center;
 }
 .back {
