--- a/src/Components/PeliculaSingle/PeliculaSingle.module.css
+++ b/src/Components/PeliculaSingle/PeliculaSingle.module.css
@@ -12,13 +12,16 @@
 }
 
 .detalles {
-  color: rgb(149, 166, 163);
+  color: rgb(227, 235, 233);
   padding: 2em;
   font-family: "Courier New", Courier, monospace;
 
   margin: auto;
 }
 
+.detalles h1 {
+  font-size: 2rem;
+}
 .fecha {
   font-weight: lighter;
   font-style: oblique;
