--- a/src/Components/PeliculaGrid/PeliculaGrid.module.css
+++ b/src/Components/PeliculaGrid/PeliculaGrid.module.css
@@ -1,5 +1,22 @@
 .moviegrid {
   display: grid;
+  grid-gap: 20px;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  max-width: 100%;
+  padding: 1rem 3rem;
+  justify-content: center;
+}
+.back {
+  background-color: #020d18;
+}
+
+.backgrid {
+  background-color: #020d18;
+  margin-left: 35%;
+}
+/* .moviegrid {
+  display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   padding: 3% 3% 0% 3%;
@@ -11,4 +28,4 @@
   display: flex;
   flex-direction: column;
   padding: 1%;
-}
+} */
