--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -19,13 +19,13 @@
 }
 
 .moviecard h3 {
-  font-size: 18px;
+  text-decoration: none;
+  font-size: 15px;
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
   margin-bottom: 10px;
-  text-decoration: none !important;
 }
 
 /*.ver {
